# advent_of_code

./: .gitignore  day1.py  day2.py  day3.py  day4.py
2015/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2016/: bo.txt  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2017/: d.py  d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py
2018/aoc/: Cargo.toml  afunc.rs  d.py  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d1_.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  p.py
2019/: boiler.zig  d.py  d01.zig  d02.zig  d03.zig  d04.zig  d05.zig  d06.zig  d07.zig  d08.zig  d09.zig  d10.zig  d11.zig  d12.zig  d13.zig  d14.zig  d15.zig  d16.zig  d17.zig  d18.zig  d18cpy.zig  d19.zig  d20.zig  d21.zig  d22.py  d22.zig  d23.zig  d24.zig  d25.zig
2020/: Program.cs  d.py
2021/: Program.cs  d.py
2022/: Day0.zig  Day01.zig  Day02.zig  Day03.zig  Day04.zig  Day05.zig  Day06.zig  Day07.zig  Day08.zig  Day09.zig  Day1.zig  Day10.zig  Day11.zig  Day12.zig  Day13.zig  Day14.zig  Day15.zig  Day16.zig  Day17.zig  Day18.zig  Day19.zig  Day20.zig  Day21.zig  Day22.zig  Day23.zig  Day24.zig  Day25.zig  d.py  t.txt  utils.zig
2023/: _day12.py  chart  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17 copy.py  day17.py  (+19 more)
(+149 files in other folders)
