[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d1"
path = "d01.rs"

[[bin]]
name = "d2"
path = "d02.rs"

[[bin]]
name = "d3"
path = "d03.rs"

[[bin]]
name = "d4"
path = "d04.rs"

[[bin]]
name = "d5"
path = "d05.rs"

[[bin]]
name = "d6"
path = "d06.rs"

[[bin]]
name = "d7"
path = "d07.rs"

[[bin]]
name = "d8"
path = "d08.rs"

[dependencies]
chrono = "0.4.39"
regex = "1.11.1"
