[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d1"
path = "d01.rs"

[[bin]]
name = "d2"
path = "d02.rs"

[[bin]]
name = "d3"
path = "d03.rs"

[[bin]]
name = "d4"
path = "d04.rs"

[[bin]]
name = "d5"
path = "d05.rs"

[[bin]]
name = "d6"
path = "d06.rs"

[[bin]]
name = "d7"
path = "d07.rs"

[[bin]]
name = "d8"
path = "d08.rs"

[[bin]]
name = "d9"
path = "d09.rs"

[[bin]]
name = "d10"
path = "d10.rs"

[[bin]]
name = "d11"
path = "d11.rs"

[[bin]]
name = "d12"
path = "d12.rs"

[[bin]]
name = "d13"
path = "d13.rs"

[[bin]]
name = "d14"
path = "d14.rs"

[[bin]]
name = "d15"
path = "d15.rs"

[[bin]]
name = "d16"
path = "d16.rs"

[[bin]]
name = "d17"
path = "d17.rs"

[[bin]]
name = "d18"
path = "d18.rs"

[[bin]]
name = "d19"
path = "d19.rs"

[[bin]]
name = "d20"
path = "d20.rs"

[[bin]]
name = "d21"
path = "d21.rs"

[[bin]]
name = "d22"
path = "d22.rs"

[dependencies]
chrono = "0.4.39"
num = "0.4.3"
regex = "1.11.1"
